--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.0",
     "private": true,
     "exports": {
-        ".": "./src/index.ts"
+        ".": "./src/index.ts",
+        "./css": "./src/index.css"
     },
     "scripts": {
         "lint": "eslint . --max-warnings 0"
@@ -11,13 +12,17 @@
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
         "@repo/typescript-config": "workspace:*",
+        "@repo/tailwind-config": "workspace:*",
         "@turbo/gen": "^1.12.4",
         "@types/eslint": "^8.56.5",
         "@types/node": "^20.11.24",
         "@types/react": "^18.2.61",
         "@types/react-dom": "^18.2.19",
+        "autoprefixer": "^10.4.19",
         "eslint": "^8.57.0",
+        "postcss": "^8.4.38",
         "react": "^18.2.0",
+        "tailwindcss": "^3.4.4",
         "typescript": "^5.3.3"
     }
 }
