--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -3,6 +3,6 @@
     "compilerOptions": {
         "outDir": "dist"
     },
-    "include": ["src"],
+    "include": ["src", "postcss.config.js", "tailwind.config.js"],
     "exclude": ["node_modules", "dist"]
 }
