--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,13 +10,17 @@
     },
     "dependencies": {
         "@repo/ui": "workspace:*",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "tailwind-merge": "^2.3.0",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
-        "@repo/typescript-config": "workspace:*",
         "@repo/tailwind-config": "workspace:*",
+        "@repo/typescript-config": "workspace:*",
         "@types/react": "^18.2.66",
         "@types/react-dom": "^18.2.22",
         "@vitejs/plugin-react": "^4.2.1",
