--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,8 +11,8 @@
     },
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
-        "@repo/typescript-config": "workspace:*",
         "@repo/tailwind-config": "workspace:*",
+        "@repo/typescript-config": "workspace:*",
         "@turbo/gen": "^1.12.4",
         "@types/eslint": "^8.56.5",
         "@types/node": "^20.11.24",
@@ -24,5 +24,13 @@
         "react": "^18.2.0",
         "tailwindcss": "^3.4.4",
         "typescript": "^5.3.3"
+    },
+    "dependencies": {
+        "@repo/utils": "workspace:*",
+        "@radix-ui/react-slot": "^1.0.2",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "tailwind-merge": "^2.3.0",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
