--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -7,13 +7,19 @@
         "react.js"
     ],
     "devDependencies": {
-        "eslint-config-turbo": "^2.0.0",
+        "@types/node": "^20.11.24",
+        "@typescript-eslint/eslint-plugin": "^7.1.0",
+        "@typescript-eslint/parser": "^7.1.0",
         "eslint-config-prettier": "^9.1.0",
+        "eslint-config-turbo": "^2.0.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-jsx-a11y": "^6.8.0",
         "eslint-plugin-only-warn": "^1.1.0",
+        "eslint-plugin-react": "^7.34.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.6",
-        "@typescript-eslint/parser": "^7.1.0",
-        "@typescript-eslint/eslint-plugin": "^7.1.0",
+        "eslint-plugin-simple-import-sort": "^12.1.0",
+        "eslint-plugin-tailwindcss": "^3.17.3",
         "typescript": "^5.3.3"
     }
 }
