--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "@types/node": "^20.11.24",
-        "tailwindcss": "^3.4.4"
+        "tailwindcss": "^3.4.4",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
