--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
         "@repo/ui": "workspace:*",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "lucide-react": "^0.395.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwind-merge": "^2.3.0",
