--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -26,10 +26,17 @@
         "typescript": "^5.3.3"
     },
     "dependencies": {
-        "@repo/utils": "workspace:*",
+        "@radix-ui/react-checkbox": "^1.0.4",
+        "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@radix-ui/react-scroll-area": "^1.0.5",
+        "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-switch": "^1.0.3",
+        "@repo/utils": "workspace:*",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "lucide-react": "^0.395.0",
         "tailwind-merge": "^2.3.0",
         "tailwindcss-animate": "^1.0.7"
     }
