--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,13 +3,15 @@
     "private": true,
     "version": "0.0.0",
     "scripts": {
-        "dev": "vite",
+        "dev": "vite && tsr watch",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
     "dependencies": {
         "@repo/ui": "workspace:*",
+        "@tanstack/react-router": "1.38.1",
+        "@tanstack/router-cli": "^1.37.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.395.0",
@@ -22,6 +24,8 @@
         "@repo/eslint-config": "workspace:*",
         "@repo/tailwind-config": "workspace:*",
         "@repo/typescript-config": "workspace:*",
+        "@tanstack/router-devtools": "^1.38.1",
+        "@tanstack/router-vite-plugin": "^1.38.0",
         "@types/react": "^18.2.66",
         "@types/react-dom": "^18.2.22",
         "@vitejs/plugin-react": "^4.2.1",
