--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
         "build": "turbo build",
         "dev": "turbo dev",
         "lint": "turbo lint",
+        "migrate": "turbo migrate",
         "format": "prettier --write \"**/*.{ts,tsx,md}\""
     },
     "devDependencies": {
         "prettier": "^3.2.5",
+        "tslib": "^2.6.3",
         "turbo": "^2.0.4",
         "typescript": "^5.4.5"
     },
