--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,13 @@
 {
     "$schema": "https://turbo.build/schema.json",
+    "globalEnv": [
+        "POSTGRES_CONNECTION",
+        "POSTGRES_HOST",
+        "POSTGRES_PORT",
+        "POSTGRES_USER",
+        "POSTGRES_PASSWORD",
+        "POSTGRES_DB"
+    ],
     "tasks": {
         "build": {
             "dependsOn": ["^build"],
@@ -12,6 +20,7 @@
         "dev": {
             "cache": false,
             "persistent": true
-        }
+        },
+        "migrate": {}
     }
 }
