--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -15,6 +15,7 @@
         "@repo/typescript-config": "workspace:*",
         "@types/eslint": "^8.56.5",
         "@types/node": "^20.11.24",
+        "dotenv": "^16.4.5",
         "drizzle-kit": "^0.22.7",
         "eslint": "^8.57.0",
         "tsx": "^4.15.5",
