--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -8,7 +8,8 @@
     "scripts": {
         "dev": "drizzle-kit studio",
         "lint": "eslint . --max-warnings 0",
-        "migrate": "drizzle-kit generate && tsx migrate.ts"
+        "migrate": "drizzle-kit generate && tsx migrate.ts",
+        "seed": "tsx seeds/index.ts"
     },
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
@@ -23,6 +24,7 @@
     },
     "dependencies": {
         "@repo/utils": "workspace:*",
+        "argon2": "^0.40.3",
         "drizzle-orm": "^0.31.2",
         "postgres": "^3.4.4"
     }
