--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "dev": "turbo dev",
         "lint": "turbo lint",
         "migrate": "turbo migrate",
+        "seed": "turbo seed",
         "format": "prettier --write \"**/*.{ts,tsx,md}\""
     },
     "devDependencies": {
