--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -3,6 +3,6 @@
     "compilerOptions": {
         "outDir": "dist"
     },
-    "include": ["src", "seeds", "drizzle.config.ts", "migrate.ts"],
+    "include": ["src"],
     "exclude": ["node_modules", "dist"]
 }
