--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ POSTGRES_DB=db
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_CONNECTION=postgresql://user:password@localhost:5432/db
+SERVER_HOST=localhost
+SERVER_PORT=3000
