--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,9 @@
         "POSTGRES_PORT",
         "POSTGRES_USER",
         "POSTGRES_PASSWORD",
-        "POSTGRES_DB"
+        "POSTGRES_DB",
+        "SERVER_HOST",
+        "SERVER_PORT"
     ],
     "tasks": {
         "build": {
