--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,27 +1,27 @@
 {
-    "name": "@repo/api",
+    "name": "@repo/server",
     "version": "0.0.0",
     "private": true,
-    "exports": {
-        ".": "./src/index.ts"
-    },
     "scripts": {
+        "dev": "tsx src/index.ts",
         "lint": "eslint . --max-warnings 0"
     },
     "dependencies": {
-        "@repo/db": "workspace:*",
+        "@repo/api": "workspace:*",
         "@repo/utils": "workspace:*",
         "@trpc/server": "^10.45.2",
-        "argon2": "^0.40.3",
-        "drizzle-orm": "^0.31.2",
-        "zod": "^3.23.8"
+        "fastify": "^4.28.0",
+        "fastify-plugin": "^4.5.1"
     },
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
         "@repo/typescript-config": "workspace:*",
         "@types/eslint": "^8.56.5",
         "@types/node": "^20.11.24",
+        "dotenv": "^16.4.5",
         "eslint": "^8.57.0",
+        "trpc-panel": "^1.3.4",
+        "tsx": "^4.15.5",
         "typescript": "^5.5.2"
     }
 }
