--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,6 +21,7 @@
         "@repo/typescript-config": "workspace:*",
         "@types/eslint": "^8.56.5",
         "@types/node": "^20.11.24",
+        "dotenv": "^16.4.5",
         "eslint": "^8.57.0",
         "typescript": "^5.5.2"
     }
