--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,11 +14,11 @@
         "fastify-plugin": "^4.5.1"
     },
     "devDependencies": {
+        "@repo/env-config": "workspace:*",
         "@repo/eslint-config": "workspace:*",
         "@repo/typescript-config": "workspace:*",
         "@types/eslint": "^8.56.5",
         "@types/node": "^20.11.24",
-        "dotenv": "^16.4.5",
         "eslint": "^8.57.0",
         "trpc-panel": "^1.3.4",
         "tsx": "^4.15.5",
