--- a/packages/env-config/package.json
+++ b/packages/env-config/package.json
@@ -1,26 +1,16 @@
 {
-    "name": "@repo/api",
+    "name": "@repo/env-config",
     "version": "0.0.0",
     "private": true,
     "exports": {
         ".": "./src/index.ts"
-    },
-    "scripts": {
-        "lint": "eslint . --max-warnings 0"
-    },
-    "dependencies": {
-        "@repo/db": "workspace:*",
-        "@repo/utils": "workspace:*",
-        "@trpc/server": "^10.45.2",
-        "argon2": "^0.40.3",
-        "drizzle-orm": "^0.31.2",
-        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
         "@repo/typescript-config": "workspace:*",
         "@types/eslint": "^8.56.5",
         "@types/node": "^20.11.24",
+        "dotenv": "^16.4.5",
         "eslint": "^8.57.0",
         "typescript": "^5.5.2"
     }
