--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,9 +9,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@repo/api": "workspace:*",
         "@repo/ui": "workspace:*",
         "@tanstack/react-router": "1.38.1",
         "@tanstack/router-cli": "^1.37.0",
+        "@trpc/client": "^10.45.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.395.0",
@@ -21,6 +23,7 @@
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@repo/env-config": "workspace:*",
         "@repo/eslint-config": "workspace:*",
         "@repo/tailwind-config": "workspace:*",
         "@repo/typescript-config": "workspace:*",
@@ -34,6 +37,6 @@
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.4",
         "typescript": "^5.2.2",
-        "vite": "^5.2.0"
+        "vite": "^5.3.1"
     }
 }
