--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,6 +1,8 @@
 {
-    "extends": "@repo/typescript-config/react.json",
+    "extends": "@repo/typescript-config/tsconfig.react.json",
     "compilerOptions": {
+        "module": "ESNext",
+        "moduleResolution": "Bundler",
         "outDir": "dist"
     },
     "include": ["src", "vite.config.ts", "postcss.config.js", "tailwind.config.js"],
