--- a/packages/typescript-config/tsconfig.react.json
+++ b/packages/typescript-config/tsconfig.react.json
@@ -1,8 +1,9 @@
 {
     "$schema": "https://json.schemastore.org/tsconfig",
     "display": "React",
-    "extends": "./base.json",
+    "extends": "./tsconfig.base.json",
     "compilerOptions": {
+        "lib": ["ES2022", "DOM", "DOM.Iterable"],
         "jsx": "react-jsx"
     }
 }
