--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "@repo/typescript-config/react.json",
+    "extends": "@repo/typescript-config/tsconfig.react.json",
     "compilerOptions": {
         "outDir": "dist"
     },
