--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,14 +11,17 @@
     "dependencies": {
         "@repo/api": "workspace:*",
         "@repo/ui": "workspace:*",
+        "@tanstack/react-query": "^4.35.3",
         "@tanstack/react-router": "1.38.1",
         "@tanstack/router-cli": "^1.37.0",
         "@trpc/client": "^10.45.2",
+        "@trpc/react-query": "^10.45.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.395.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "superjson": "^2.2.1",
         "tailwind-merge": "^2.3.0",
         "tailwindcss-animate": "^1.0.7"
     },
