--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,6 +14,7 @@
         "@trpc/server": "^10.45.2",
         "argon2": "^0.40.3",
         "drizzle-orm": "^0.31.2",
+        "superjson": "^2.2.1",
         "zod": "^3.23.8"
     },
     "devDependencies": {
