--- a/packages/typescript-config/tsconfig.base.json
+++ b/packages/typescript-config/tsconfig.base.json
@@ -3,8 +3,8 @@
     "display": "Base",
     "compilerOptions": {
         "target": "ES2022",
-        "module": "NodeNext",
-        "moduleResolution": "NodeNext",
+        "module": "ESNext",
+        "moduleResolution": "Bundler",
         "moduleDetection": "force",
         "lib": ["ES2022"],
         "esModuleInterop": true,
