fix: server dev command

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "dev": "tsx src/index.ts",
+        "dev": "tsx watch --tsconfig ./tsconfig.json src/index.ts",
         "lint": "eslint . --max-warnings 0"
     },
     "dependencies": {
