--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,7 +4,8 @@
     "private": true,
     "scripts": {
         "dev": "tsx watch --tsconfig ./tsconfig.json src/index.ts",
-        "lint": "eslint . --max-warnings 0"
+        "lint": "eslint . --max-warnings 0",
+        "type-check": "tsc --noEmit -p ./tsconfig.json"
     },
     "dependencies": {
         "@repo/api": "workspace:*",
