--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,6 +6,7 @@
         "dev": "vite && tsr watch",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "type-check": "tsc --noEmit -p ./tsconfig.json",
         "preview": "vite preview"
     },
     "dependencies": {
