--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,7 +7,8 @@
         "./css": "./src/index.css"
     },
     "scripts": {
-        "lint": "eslint . --max-warnings 0"
+        "lint": "eslint . --max-warnings 0",
+        "type-check": "tsc --noEmit -p ./tsconfig.json"
     },
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
