--- a/turbo.json
+++ b/turbo.json
@@ -13,11 +13,13 @@
     "tasks": {
         "build": {
             "dependsOn": ["^build"],
-            "inputs": ["$TURBO_DEFAULT$", ".env", ".env.*"],
-            "outputs": [".next/**", "!.next/cache/**"]
+            "inputs": ["$TURBO_DEFAULT$", ".env", ".env.*"]
         },
         "lint": {
             "dependsOn": ["^lint"]
+        },
+        "type-check": {
+            "dependsOn": ["^type-check"]
         },
         "dev": {
             "cache": false,
