--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,19 +10,19 @@
     "dependencies": {
         "@repo/api": "workspace:*",
         "@repo/utils": "workspace:*",
-        "@trpc/server": "^10.45.2",
-        "fastify": "^4.28.0",
+        "@trpc/server": "11.0.0-rc.433",
+        "fastify": "^4.28.1",
         "fastify-plugin": "^4.5.1"
     },
     "devDependencies": {
+        "@metamorph/trpc-panel": "^1.0.5",
         "@repo/env-config": "workspace:*",
         "@repo/eslint-config": "workspace:*",
         "@repo/typescript-config": "workspace:*",
-        "@types/eslint": "^8.56.5",
-        "@types/node": "^20.11.24",
-        "eslint": "^8.57.0",
-        "trpc-panel": "^1.3.4",
-        "tsx": "^4.15.5",
+        "@types/eslint": "^8.56.10",
+        "@types/node": "^20.14.9",
+        "eslint": "^9.6.0",
+        "tsx": "^4.16.0",
         "typescript": "^5.5.2"
     }
 }
