--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,16 +12,16 @@
     "dependencies": {
         "@repo/api": "workspace:*",
         "@repo/ui": "workspace:*",
-        "@tanstack/react-query": "^4.35.3",
-        "@tanstack/react-router": "1.38.1",
-        "@tanstack/router-cli": "^1.37.0",
-        "@trpc/client": "^10.45.2",
-        "@trpc/react-query": "^10.45.2",
+        "@tanstack/react-query": "^5.49.0",
+        "@tanstack/react-router": "1.43.2",
+        "@tanstack/router-cli": "^1.43.1",
+        "@trpc/client": "11.0.0-rc.433",
+        "@trpc/react-query": "11.0.0-rc.433",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
-        "lucide-react": "^0.395.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "lucide-react": "^0.399.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "superjson": "^2.2.1",
         "tailwind-merge": "^2.3.0",
         "tailwindcss-animate": "^1.0.7"
@@ -31,16 +31,16 @@
         "@repo/eslint-config": "workspace:*",
         "@repo/tailwind-config": "workspace:*",
         "@repo/typescript-config": "workspace:*",
-        "@tanstack/router-devtools": "^1.38.1",
-        "@tanstack/router-vite-plugin": "^1.38.0",
-        "@types/react": "^18.2.66",
-        "@types/react-dom": "^18.2.22",
-        "@vitejs/plugin-react": "^4.2.1",
+        "@tanstack/router-devtools": "^1.43.2",
+        "@tanstack/router-vite-plugin": "^1.43.1",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.3.1",
         "autoprefixer": "^10.4.19",
-        "eslint": "^8.57.0",
+        "eslint": "^9.6.0",
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.4",
-        "typescript": "^5.2.2",
-        "vite": "^5.3.1"
+        "typescript": "^5.5.2",
+        "vite": "^5.3.2"
     }
 }
