--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,7 +12,7 @@
     "dependencies": {
         "@repo/db": "workspace:*",
         "@repo/utils": "workspace:*",
-        "@trpc/server": "^10.45.2",
+        "@trpc/server": "11.0.0-rc.433",
         "argon2": "^0.40.3",
         "drizzle-orm": "^0.31.2",
         "superjson": "^2.2.1",
@@ -21,9 +21,9 @@
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
         "@repo/typescript-config": "workspace:*",
-        "@types/eslint": "^8.56.5",
-        "@types/node": "^20.11.24",
-        "eslint": "^8.57.0",
+        "@types/eslint": "^8.56.10",
+        "@types/node": "^20.14.9",
+        "eslint": "^9.6.0",
         "typescript": "^5.5.2"
     }
 }
