--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
-        "@repo/typescript-config": "workspace:*",
+        "@repo/typescript": "workspace:*",
         "@types/eslint": "^8.56.10",
         "@types/node": "^20.14.9",
         "dotenv": "^16.4.5",
