--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,7 +13,7 @@
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
         "@repo/tailwind-config": "workspace:*",
-        "@repo/typescript-config": "workspace:*",
+        "@repo/typescript": "workspace:*",
         "@turbo/gen": "^2.0.6",
         "@types/eslint": "^8.56.10",
         "@types/node": "^20.14.9",
