--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,7 +29,7 @@
     "devDependencies": {
         "@repo/env": "workspace:*",
         "@repo/eslint-config": "workspace:*",
-        "@repo/tailwind-config": "workspace:*",
+        "@repo/tailwind": "workspace:*",
         "@repo/typescript": "workspace:*",
         "@tanstack/router-devtools": "^1.43.2",
         "@tanstack/router-vite-plugin": "^1.43.1",
