--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@repo/tailwind-config",
+    "name": "@repo/tailwind",
     "version": "0.0.0",
     "private": true,
     "exports": {
