--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,7 +12,7 @@
     },
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
-        "@repo/tailwind-config": "workspace:*",
+        "@repo/tailwind": "workspace:*",
         "@repo/typescript": "workspace:*",
         "@turbo/gen": "^2.0.6",
         "@types/eslint": "^8.56.10",
