--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,6 +2,7 @@
     "name": "@repo/web",
     "private": true,
     "version": "0.0.0",
+    "type": "module",
     "scripts": {
         "dev": "vite && tsr watch",
         "build": "tsc && vite build",
