--- a/turbo.json
+++ b/turbo.json
@@ -1,14 +1,18 @@
 {
     "$schema": "https://turbo.build/schema.json",
     "globalEnv": [
-        "POSTGRES_CONNECTION",
+        "POSTGRES_URL",
         "POSTGRES_HOST",
         "POSTGRES_PORT",
+        "POSTGRES_DB",
         "POSTGRES_USER",
         "POSTGRES_PASSWORD",
-        "POSTGRES_DB",
+        "SERVER_URL",
         "SERVER_HOST",
-        "SERVER_PORT"
+        "SERVER_PORT",
+        "WEB_URL",
+        "WEB_HOST",
+        "WEB_PORT"
     ],
     "tasks": {
         "build": {
