refact: env.example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
+POSTGRES_URL=postgresql://user:password@localhost:5432/db
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=db
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
-POSTGRES_CONNECTION=postgresql://user:password@localhost:5432/db
+SERVER_URL=http://localhost:3000
 SERVER_HOST=localhost
 SERVER_PORT=3000
+WEB_URL=http://localhost:3001
+WEB_HOST=localhost
+WEB_PORT=3001
