fix: env, add cors

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,11 @@ POSTGRES_PORT=5432
 POSTGRES_DB=db
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
+
 SERVER_URL=http://localhost:3000
 SERVER_HOST=localhost
 SERVER_PORT=3000
-WEB_URL=http://localhost:3001
-WEB_HOST=localhost
-WEB_PORT=3001
+
+VITE_SERVER_URL=http://localhost:3000
+VITE_WEB_HOST=localhost
+VITE_WEB_PORT=3001
