--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,6 +38,7 @@
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.1",
         "autoprefixer": "^10.4.19",
+        "dotenv": "^16.4.5",
         "eslint": "^8.57.0",
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.4",
