feat: authentication backend

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -10,9 +10,11 @@
         "type-check": "tsc --noEmit -p ./tsconfig.json"
     },
     "devDependencies": {
+        "@repo/env": "workspace:*",
         "@repo/eslint-config": "workspace:*",
         "@repo/typescript": "workspace:*",
         "@types/eslint": "^8.56.10",
+        "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.14.9",
         "eslint": "^8.57.0",
         "typescript": "^5.5.2"
@@ -20,6 +22,8 @@
     "dependencies": {
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
-        "tailwind-merge": "^2.3.0"
+        "jsonwebtoken": "^9.0.2",
+        "tailwind-merge": "^2.3.0",
+        "zod": "^3.23.8"
     }
 }
