--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
         "@tanstack/router-cli": "^1.43.1",
         "@trpc/client": "11.0.0-rc.433",
         "@trpc/react-query": "11.0.0-rc.433",
+        "@trpc/server": "11.0.0-rc.433",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.399.0",
@@ -43,6 +44,7 @@
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.4",
         "typescript": "^5.5.2",
-        "vite": "^5.3.2"
+        "vite": "^5.3.2",
+        "vite-plugin-node-polyfills": "^0.22.0"
     }
 }
