--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,5 @@ VITE_SERVER_URL=http://localhost:3000
 VITE_WEB_HOST=localhost
 VITE_WEB_PORT=3001
 
-JWT_SECRET=secret
+COOKIE_SECRET=cookie-secret
+JWT_SECRET=jwt-secret
