--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,6 +9,7 @@
         "build": "esbuild --bundle --platform=node --outdir=dist src/index.ts"
     },
     "dependencies": {
+        "@fastify/autoload": "^5.10.0",
         "@fastify/cookie": "^9.3.1",
         "@fastify/cors": "^9.0.1",
         "@repo/api": "workspace:*",
@@ -18,7 +19,6 @@
         "fastify-plugin": "^4.5.1"
     },
     "devDependencies": {
-        "@metamorph/trpc-panel": "^1.0.5",
         "@repo/env": "workspace:*",
         "@repo/eslint-config": "workspace:*",
         "@repo/typescript": "workspace:*",
