--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@repo/utils",
+    "name": "@repo/lib",
     "version": "0.0.0",
     "private": true,
     "exports": {
@@ -20,10 +20,7 @@
         "typescript": "^5.5.2"
     },
     "dependencies": {
-        "class-variance-authority": "^0.7.0",
-        "clsx": "^2.1.1",
         "jsonwebtoken": "^9.0.2",
-        "tailwind-merge": "^2.3.0",
         "zod": "^3.23.8"
     }
 }
