--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,7 +13,7 @@
         "@fastify/cookie": "^9.3.1",
         "@fastify/cors": "^9.0.1",
         "@repo/api": "workspace:*",
-        "@repo/utils": "workspace:*",
+        "@repo/lib": "workspace:*",
         "@trpc/server": "11.0.0-rc.433",
         "fastify": "^4.28.1",
         "fastify-plugin": "^4.5.1"
