--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,7 +12,7 @@
     "dependencies": {
         "@repo/env": "workspace:*",
         "@repo/db": "workspace:*",
-        "@repo/utils": "workspace:*",
+        "@repo/lib": "workspace:*",
         "@trpc/server": "11.0.0-rc.433",
         "argon2": "^0.40.3",
         "drizzle-orm": "^0.31.2",
