--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -24,7 +24,7 @@
         "typescript": "^5.5.2"
     },
     "dependencies": {
-        "@repo/utils": "workspace:*",
+        "@repo/lib": "workspace:*",
         "argon2": "^0.40.3",
         "drizzle-orm": "^0.31.2",
         "postgres": "^3.4.4"
