fix: dotenv path

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ SERVER_HOST=localhost
 SERVER_PORT=3000
 
 VITE_SERVER_URL=http://localhost:3000
+VITE_WEB_URL=http://localhost:3001
 VITE_WEB_HOST=localhost
 VITE_WEB_PORT=3001
 
