--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -3,6 +3,6 @@
     "compilerOptions": {
         "outDir": "dist"
     },
-    "include": ["src"],
+    "include": ["src", "esbuild.ts"],
     "exclude": ["node_modules", "dist"]
 }
