--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -20,6 +20,7 @@
         "typescript": "^5.5.2"
     },
     "dependencies": {
+        "argon2": "^0.40.3",
         "jsonwebtoken": "^9.0.2",
         "zod": "^3.23.8"
     }
