--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "argon2": "^0.40.3",
         "jsonwebtoken": "^9.0.2",
+        "nanoid": "^5.0.7",
         "zod": "^3.23.8"
     }
 }
