--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+POSTGRES_DATABASE=db
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
 POSTGRES_URL=postgresql://user:password@localhost:5432/db
 
 SERVER_URL=http://localhost:3000
