--- a/apps/web-admin/package.json
+++ b/apps/web-admin/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@repo/web-react",
+    "name": "@repo/web-admin",
     "private": true,
     "version": "0.0.0",
     "type": "module",
