--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -30,14 +30,15 @@
         "@radix-ui/react-checkbox": "^1.1.1",
         "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-dropdown-menu": "^2.1.1",
+        "@radix-ui/react-label": "^2.1.0",
         "@radix-ui/react-scroll-area": "^1.1.0",
         "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-switch": "^1.1.0",
-        "@repo/lib": "workspace:*",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.399.0",
+        "react-hook-form": "^7.52.2",
         "tailwind-merge": "^2.3.0",
         "tailwindcss-animate": "^1.0.7"
     }
