--- a/apps/web-admin/package.json
+++ b/apps/web-admin/package.json
@@ -28,7 +28,8 @@
         "react-hook-form": "^7.52.2",
         "superjson": "^2.2.1",
         "tailwind-merge": "^2.3.0",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "ts-pattern": "^5.3.1"
     },
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
