--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -27,6 +27,7 @@
         "typescript": "^5.5.2"
     },
     "dependencies": {
+        "@radix-ui/react-avatar": "^1.1.0",
         "@radix-ui/react-checkbox": "^1.1.1",
         "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-dropdown-menu": "^2.1.1",
