--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -32,6 +32,7 @@
         "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-dropdown-menu": "^2.1.1",
         "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-popover": "^1.1.1",
         "@radix-ui/react-scroll-area": "^1.1.0",
         "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-slot": "^1.1.0",
@@ -39,6 +40,7 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.399.0",
+        "react-colorful": "^5.6.1",
         "react-hook-form": "^7.52.2",
         "tailwind-merge": "^2.3.0",
         "tailwindcss-animate": "^1.0.7"
