refact: db init

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-POSTGRES_DATABASE=db
+POSTGRES_DATABASES=db
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
-POSTGRES_URL=postgresql://user:password@localhost:5432/db
+POSTGRES_DB_URL=postgresql://user:password@localhost:5432/db
 
 SERVER_URL=http://localhost:3000
 SERVER_HOST=localhost
