--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,13 @@
 services:
     db:
-        image: postgres:15
+        image: postgres:16.6
         container_name: turbo-pg
         environment:
-            - POSTGRES_DATABASE=${POSTGRES_DATABASE}
+            - POSTGRES_DATABASES=${POSTGRES_DATABASES}
             - POSTGRES_USER=${POSTGRES_USER}
             - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
         ports:
             - "5432:5432"
         volumes:
             - ./scripts/init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
-            - ./_db:/var/lib/postgresql/data
-    # server:
-    #     build:
-    #         context: .
-    #         dockerfile: ./apps/server/Dockerfile
-    #     container_name: turbo-server
-    #     env_file:
-    #         - .env
-    #     ports:
-    #         - "3000:3000"
-    #     depends_on:
-    #         - db
-    # web:
-    #     build:
-    #         context: .
-    #         dockerfile: ./apps/web/Dockerfile
-    #     container_name: turbo-web
-    #     env_file:
-    #         - .env
-    #     ports:
-    #         - "3001:3001"
-    #     depends_on:
-    #         - server
+            - ./_db:/var/lib/postgresql/dataß
