--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -12,10 +12,6 @@
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
         "@repo/typescript": "workspace:*",
-        "@types/eslint": "^8.56.10",
-        "@types/node": "^20.14.9",
-        "dotenv": "^16.4.5",
-        "eslint": "^8.57.0",
-        "typescript": "^5.5.2"
+        "dotenv": "^16.4.5"
     }
 }
