--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,6 +8,13 @@
         "type-check": "tsc --noEmit -p ./tsconfig.json",
         "build": "tsx --tsconfig ./tsconfig.json esbuild.ts"
     },
+    "devDependencies": {
+        "@repo/env": "workspace:*",
+        "@repo/eslint-config": "workspace:*",
+        "@repo/typescript": "workspace:*",
+        "esbuild": "^0.21.5",
+        "tsx": "^4.16.0"
+    },
     "dependencies": {
         "@fastify/autoload": "^5.10.0",
         "@fastify/cookie": "^9.3.1",
@@ -18,16 +25,5 @@
         "fastify": "^4.28.1",
         "fastify-plugin": "^4.5.1",
         "tiny-glob": "^0.2.9"
-    },
-    "devDependencies": {
-        "@repo/env": "workspace:*",
-        "@repo/eslint-config": "workspace:*",
-        "@repo/typescript": "workspace:*",
-        "@types/eslint": "^8.56.10",
-        "@types/node": "^20.14.9",
-        "esbuild": "^0.21.5",
-        "eslint": "^8.57.0",
-        "tsx": "^4.16.0",
-        "typescript": "^5.5.2"
     }
 }
