--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
         "format": "prettier --write \"**/*.{ts,tsx,md}\""
     },
     "devDependencies": {
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@types/eslint": "^8.56.10",
+        "@types/node": "^20.14.9",
         "prettier": "^3.3.2",
         "turbo": "^2.4.2",
+        "eslint": "^8.57.0",
         "typescript": "^5.5.2"
     },
     "packageManager": "pnpm@9.3.0",
