--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -16,12 +16,8 @@
         "@repo/env": "workspace:*",
         "@repo/eslint-config": "workspace:*",
         "@repo/typescript": "workspace:*",
-        "@types/eslint": "^8.56.10",
-        "@types/node": "^20.14.9",
         "drizzle-kit": "^0.22.7",
-        "eslint": "^8.57.0",
-        "tsx": "^4.16.0",
-        "typescript": "^5.5.2"
+        "tsx": "^4.16.0"
     },
     "dependencies": {
         "@repo/lib": "workspace:*",
