--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -13,11 +13,7 @@
         "@repo/env": "workspace:*",
         "@repo/eslint-config": "workspace:*",
         "@repo/typescript": "workspace:*",
-        "@types/eslint": "^8.56.10",
-        "@types/jsonwebtoken": "^9.0.6",
-        "@types/node": "^20.14.9",
-        "eslint": "^8.57.0",
-        "typescript": "^5.5.2"
+        "@types/jsonwebtoken": "^9.0.6"
     },
     "dependencies": {
         "jsonwebtoken": "^9.0.2",
