--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -14,17 +14,11 @@
         "@repo/eslint-config": "workspace:*",
         "@repo/tailwind": "workspace:*",
         "@repo/typescript": "workspace:*",
-        "@turbo/gen": "^2.0.6",
-        "@types/eslint": "^8.56.10",
-        "@types/node": "^20.14.9",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "autoprefixer": "^10.4.19",
-        "eslint": "^8.57.0",
         "postcss": "^8.4.38",
-        "react": "^18.3.1",
-        "tailwindcss": "^3.4.4",
-        "typescript": "^5.5.2"
+        "tailwindcss": "^3.4.4"
     },
     "dependencies": {
         "@radix-ui/react-avatar": "^1.1.0",
@@ -40,6 +34,7 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.399.0",
+        "react": "^18.3.1",
         "react-colorful": "^5.6.1",
         "react-hook-form": "^7.52.2",
         "tailwind-merge": "^2.3.0",
