--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -3,7 +3,6 @@
     "version": "0.0.0",
     "private": true,
     "devDependencies": {
-        "@types/node": "^20.14.9",
         "@typescript-eslint/eslint-plugin": "^7.14.1",
         "@typescript-eslint/parser": "^7.14.1",
         "eslint-config-prettier": "^9.1.0",
@@ -15,7 +14,6 @@
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-refresh": "^0.4.7",
         "eslint-plugin-simple-import-sort": "^12.1.0",
-        "eslint-plugin-tailwindcss": "^3.17.4",
-        "typescript": "^5.5.2"
+        "eslint-plugin-tailwindcss": "^3.17.4"
     }
 }
