--- a/apps/frontend-react/package.json
+++ b/apps/frontend-react/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@repo/web-admin",
+    "name": "@repo/frontend-react",
     "private": true,
     "version": "0.0.0",
     "type": "module",
@@ -14,7 +14,7 @@
         "@repo/eslint-config": "workspace:*",
         "@repo/tailwind": "workspace:*",
         "@repo/typescript": "workspace:*",
-        "@tanstack/router-devtools": "^1.43.2",
+        "@tanstack/router-devtools": "^1.105.0",
         "@tanstack/router-vite-plugin": "^1.43.1",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
@@ -30,8 +30,8 @@
         "@repo/api": "workspace:*",
         "@repo/web-ui": "workspace:*",
         "@tanstack/react-query": "^5.49.0",
-        "@tanstack/react-router": "1.43.2",
-        "@tanstack/router-cli": "^1.43.1",
+        "@tanstack/react-router": "1.105.0",
+        "@tanstack/router-cli": "^1.105.0",
         "@trpc/client": "11.0.0-rc.433",
         "@trpc/react-query": "11.0.0-rc.433",
         "@trpc/server": "11.0.0-rc.433",
