--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,14 +16,12 @@
         "tsx": "^4.19.2"
     },
     "dependencies": {
-        "@fastify/autoload": "^5.10.0",
-        "@fastify/cookie": "^9.4.0",
-        "@fastify/cors": "^9.0.1",
+        "@hono/node-server": "^1.13.8",
+        "@hono/trpc-server": "^0.3.4",
         "@repo/api": "workspace:*",
         "@repo/lib": "workspace:*",
         "@trpc/server": "11.0.0-rc.433",
-        "fastify": "^4.29.0",
-        "fastify-plugin": "^4.5.1",
+        "hono": "^4.7.1",
         "tiny-glob": "^0.2.9"
     }
 }
