--- a/apps/frontend-admin/package.json
+++ b/apps/frontend-admin/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@repo/frontend-react",
+    "name": "@repo/frontend-admin",
     "private": true,
     "version": "0.0.0",
     "type": "module",
